// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitVb > kitchen sink contract > Dispatcher.Generated.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System
Imports System.Runtime.CompilerServices
Imports WebView2Bridge.Runtime

Namespace Global.WebView2Bridge.Contract

    ''' <summary>契約の実装を Dispatcher に登録する拡張メソッド。dispatcher.Register(api) と書ける</summary>
    Public Module DispatcherExtensions

        ''' <summary>契約に含まれる全メソッド名</summary>
        Public ReadOnly MethodNames As String() = {"customers.list", "customers.save", "system.ping"}

        ''' <summary>"customers.*" の実装を登録する</summary>
        <Extension>
        Public Sub Register(dispatcher As Dispatcher, api As ICustomersApi)
            If dispatcher Is Nothing Then Throw New ArgumentNullException(NameOf(dispatcher))
            If api Is Nothing Then Throw New ArgumentNullException(NameOf(api))
            dispatcher.RegisterHandler(Of CustomersListRequest, CustomersListResponse)("customers.list", AddressOf api.List)
            dispatcher.RegisterHandler(Of CustomersSaveRequest, CustomersSaveResponse)("customers.save", AddressOf api.Save)
        End Sub

        ''' <summary>"system.*" の実装を登録する</summary>
        <Extension>
        Public Sub Register(dispatcher As Dispatcher, api As ISystemApi)
            If dispatcher Is Nothing Then Throw New ArgumentNullException(NameOf(dispatcher))
            If api Is Nothing Then Throw New ArgumentNullException(NameOf(api))
            dispatcher.RegisterHandler(Of SystemPingRequest, SystemPingResponse)("system.ping", AddressOf api.Ping)
        End Sub
    End Module

End Namespace
"
`;

exports[`emitVb > kitchen sink contract > Dto.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System
Imports System.Collections.Generic
Imports Newtonsoft.Json
Imports Newtonsoft.Json.Linq
Imports WebView2Bridge.Runtime

Namespace Global.WebView2Bridge.Contract

    Public Class Customer
        Implements IValidatable

        <JsonProperty("id", Required:=Required.Always)>
        Public Property Id As Integer

        <JsonProperty("name", Required:=Required.Always)>
        Public Property Name As String

        <JsonProperty("status", Required:=Required.Always)>
        Public Property Status As String

        <JsonProperty("address", NullValueHandling:=NullValueHandling.Ignore, Required:=Required.DisallowNull)>
        Public Property Address As Address

        <JsonProperty("tags", Required:=Required.Always)>
        Public Property Tags As List(Of String) = New List(Of String)()

        <JsonProperty("scores", NullValueHandling:=NullValueHandling.Ignore, Required:=Required.DisallowNull)>
        Public Property Scores As List(Of Double)

        <JsonProperty("attributes", Required:=Required.Always)>
        Public Property Attributes As Dictionary(Of String, String) = New Dictionary(Of String, String)()

        <JsonProperty("extra")>
        Public Property Extra As JToken

        ''' <summary>VB 予約語の回避を確認する</summary>
        <JsonProperty("date", Required:=Required.Always)>
        Public Property [Date] As String

        <JsonProperty("end", NullValueHandling:=NullValueHandling.Ignore, Required:=Required.DisallowNull)>
        Public Property [End] As Nullable(Of Boolean)

        <JsonProperty("snake_case_name", Required:=Required.Always)>
        Public Property SnakeCaseName As String

        <JsonProperty("nullableInt", Required:=Required.AllowNull)>
        Public Property NullableInt As Nullable(Of Integer)

        <JsonProperty("optionalNullableInt", NullValueHandling:=NullValueHandling.Ignore)>
        Public Property OptionalNullableInt As Nullable(Of Integer)

        <JsonProperty("kind", Required:=Required.Always)>
        Public Property Kind As String

        <JsonProperty("children", Required:=Required.Always)>
        Public Property Children As List(Of CustomerChild) = New List(Of CustomerChild)()

        <JsonProperty("meta", NullValueHandling:=NullValueHandling.Ignore, Required:=Required.DisallowNull)>
        Public Property Meta As CustomerMeta

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
            Dim prefix As String = If(String.IsNullOrEmpty(path), String.Empty, path & ".")
            If Status IsNot Nothing Then
                If Array.IndexOf(Status.Values, Status) < 0 Then issues.Add(prefix & "status" & ": " & "次のいずれか: " & String.Join(" / ", Status.Values))
            End If
            If Address IsNot Nothing Then
                Address.Validate(prefix & "address", issues)
            End If
            If Kind IsNot Nothing Then
                If Array.IndexOf(CustomerKind.Values, Kind) < 0 Then issues.Add(prefix & "kind" & ": " & "次のいずれか: " & String.Join(" / ", CustomerKind.Values))
            End If
            If Children IsNot Nothing Then
                For i0 As Integer = 0 To Children.Count - 1
                    If Children(i0) IsNot Nothing Then
                        Children(i0).Validate(prefix & "children" & "[" & i0.ToString() & "]", issues)
                    End If
                Next
            End If
            If Meta IsNot Nothing Then
                Meta.Validate(prefix & "meta", issues)
            End If
        End Sub
    End Class

    ''' <remarks>string enum. 値は文字列のまま往復する（VB の Enum にはしない）</remarks>
    Public NotInheritable Class Status
        Private Sub New()
        End Sub

        Public Const Open As String = "open"
        Public Const InProgress As String = "in-progress"
        Public Const Closed As String = "closed"
        Public Const _2nd As String = "2nd"

        Public Shared ReadOnly Values As String() = {"open", "in-progress", "closed", "2nd"}
    End Class

    Public Class Address
        Implements IValidatable

        <JsonProperty("line1", Required:=Required.Always)>
        Public Property Line1 As String

        <JsonProperty("line2", NullValueHandling:=NullValueHandling.Ignore, Required:=Required.DisallowNull)>
        Public Property Line2 As String

        <JsonProperty("zip", Required:=Required.AllowNull)>
        Public Property Zip As String

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
        End Sub
    End Class

    ''' <remarks>string enum. 値は文字列のまま往復する（VB の Enum にはしない）</remarks>
    Public NotInheritable Class CustomerKind
        Private Sub New()
        End Sub

        Public Const A As String = "a"
        Public Const B As String = "b"

        Public Shared ReadOnly Values As String() = {"a", "b"}
    End Class

    Public Class CustomerChild
        Implements IValidatable

        <JsonProperty("childId", Required:=Required.Always)>
        Public Property ChildId As String

        <JsonProperty("weight", NullValueHandling:=NullValueHandling.Ignore, Required:=Required.DisallowNull)>
        Public Property Weight As Nullable(Of Double)

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
        End Sub
    End Class

    Public Class CustomerMeta
        Implements IValidatable

        <JsonProperty("createdBy", Required:=Required.Always)>
        Public Property CreatedBy As String

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
        End Sub
    End Class

    ''' <summary>顧客一覧を取得する</summary>
    Public Class CustomersListRequest
        Implements IValidatable

        <JsonProperty("page", NullValueHandling:=NullValueHandling.Ignore, Required:=Required.DisallowNull)>
        Public Property Page As Nullable(Of Integer)

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
        End Sub
    End Class

    Public Class CustomersListResponse
        Implements IValidatable

        <JsonProperty("items", Required:=Required.Always)>
        Public Property Items As List(Of Customer) = New List(Of Customer)()

        <JsonProperty("total", Required:=Required.Always)>
        Public Property Total As Integer

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
            Dim prefix As String = If(String.IsNullOrEmpty(path), String.Empty, path & ".")
            If Items IsNot Nothing Then
                For i0 As Integer = 0 To Items.Count - 1
                    If Items(i0) IsNot Nothing Then
                        Items(i0).Validate(prefix & "items" & "[" & i0.ToString() & "]", issues)
                    End If
                Next
            End If
        End Sub
    End Class

    Public Class CustomersSaveRequest
        Implements IValidatable

        <JsonProperty("customer", Required:=Required.Always)>
        Public Property Customer As Customer

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
            Dim prefix As String = If(String.IsNullOrEmpty(path), String.Empty, path & ".")
            If Customer IsNot Nothing Then
                Customer.Validate(prefix & "customer", issues)
            End If
        End Sub
    End Class

    Public Class CustomersSaveResponse
        Implements IValidatable

        <JsonProperty("ok", Required:=Required.Always)>
        Public Property Ok As Boolean

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
        End Sub
    End Class

    Public Class SystemPingRequest
        Implements IValidatable

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
        End Sub
    End Class

    Public Class SystemPingResponse
        Implements IValidatable

        <JsonProperty("time", Required:=Required.Always)>
        Public Property Time As String

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
        End Sub
    End Class

    Public Class CustomerChangedEvent
        Implements IValidatable

        <JsonProperty("id", Required:=Required.Always)>
        Public Property Id As Integer

        <JsonProperty("status", Required:=Required.Always)>
        Public Property Status As String

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
            Dim prefix As String = If(String.IsNullOrEmpty(path), String.Empty, path & ".")
            If Status IsNot Nothing Then
                If Array.IndexOf(Status.Values, Status) < 0 Then issues.Add(prefix & "status" & ": " & "次のいずれか: " & String.Join(" / ", Status.Values))
            End If
        End Sub
    End Class

    Public Class LogEvent
        Implements IValidatable

        <JsonProperty("level", Required:=Required.Always)>
        Public Property Level As String

        <JsonProperty("text", Required:=Required.Always)>
        Public Property Text As String

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
            Dim prefix As String = If(String.IsNullOrEmpty(path), String.Empty, path & ".")
            If Level IsNot Nothing Then
                If Array.IndexOf(LogEventLevel.Values, Level) < 0 Then issues.Add(prefix & "level" & ": " & "次のいずれか: " & String.Join(" / ", LogEventLevel.Values))
            End If
        End Sub
    End Class

    ''' <remarks>string enum. 値は文字列のまま往復する（VB の Enum にはしない）</remarks>
    Public NotInheritable Class LogEventLevel
        Private Sub New()
        End Sub

        Public Const Info As String = "info"
        Public Const Warn As String = "warn"

        Public Shared ReadOnly Values As String() = {"info", "warn"}
    End Class

End Namespace
"
`;

exports[`emitVb > kitchen sink contract > Events.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System
Imports WebView2Bridge.Runtime

Namespace Global.WebView2Bridge.Contract

    ''' <summary>Host → Web の型付きイベント発行ヘルパ。内部で IBridgeEmitter.Emit("event.&lt;name&gt;", payload) を呼ぶ</summary>
    Public Class BridgeEvents
        Private ReadOnly _emitter As IBridgeEmitter

        Public Sub New(emitter As IBridgeEmitter)
            If emitter Is Nothing Then Throw New ArgumentNullException(NameOf(emitter))
            _emitter = emitter
        End Sub

        ''' <summary>契約に含まれる全イベント名</summary>
        Public Shared ReadOnly EventNames As String() = {"event.customerChanged", "event.log"}

        ''' <summary>JSON-RPC notification "event.customerChanged"</summary>
        Public Sub CustomerChanged(payload As CustomerChangedEvent)
            _emitter.Emit("event.customerChanged", payload)
        End Sub

        ''' <summary>JSON-RPC notification "event.log"</summary>
        Public Sub Log(payload As LogEvent)
            _emitter.Emit("event.log", payload)
        End Sub
    End Class

End Namespace
"
`;

exports[`emitVb > kitchen sink contract > Interfaces.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System
Imports System.Threading.Tasks

Namespace Global.WebView2Bridge.Contract

    ''' <summary>"customers.*" メソッドの実装。人間が Implements して WebView2Bridge.Impl に置く</summary>
    Public Interface ICustomersApi
        ''' <summary>顧客一覧を取得する</summary>
        Function List(req As CustomersListRequest) As Task(Of CustomersListResponse)

        ''' <summary>JSON-RPC method "customers.save"</summary>
        Function Save(req As CustomersSaveRequest) As Task(Of CustomersSaveResponse)
    End Interface

    ''' <summary>"system.*" メソッドの実装。人間が Implements して WebView2Bridge.Impl に置く</summary>
    Public Interface ISystemApi
        ''' <summary>JSON-RPC method "system.ping"</summary>
        Function Ping(req As SystemPingRequest) As Task(Of SystemPingResponse)
    End Interface

End Namespace
"
`;

exports[`emitVb > sample contract > Dispatcher.Generated.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System
Imports System.Runtime.CompilerServices
Imports WebView2Bridge.Runtime

Namespace Global.WebView2Bridge.Contract

    ''' <summary>契約の実装を Dispatcher に登録する拡張メソッド。dispatcher.Register(api) と書ける</summary>
    Public Module DispatcherExtensions

        ''' <summary>契約に含まれる全メソッド名</summary>
        Public ReadOnly MethodNames As String() = {"parts.search"}

        ''' <summary>"parts.*" の実装を登録する</summary>
        <Extension>
        Public Sub Register(dispatcher As Dispatcher, api As IPartsApi)
            If dispatcher Is Nothing Then Throw New ArgumentNullException(NameOf(dispatcher))
            If api Is Nothing Then Throw New ArgumentNullException(NameOf(api))
            dispatcher.RegisterHandler(Of PartsSearchRequest, PartsSearchResponse)("parts.search", AddressOf api.Search)
        End Sub
    End Module

End Namespace
"
`;

exports[`emitVb > sample contract > Dto.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System
Imports System.Collections.Generic
Imports Newtonsoft.Json
Imports Newtonsoft.Json.Linq
Imports WebView2Bridge.Runtime

Namespace Global.WebView2Bridge.Contract

    Public Class Part
        Implements IValidatable

        <JsonProperty("partNo", Required:=Required.Always)>
        Public Property PartNo As String

        <JsonProperty("name", Required:=Required.Always)>
        Public Property Name As String

        <JsonProperty("qty", Required:=Required.Always)>
        Public Property Qty As Integer

        ''' <summary>ISO 8601</summary>
        <JsonProperty("updatedAt", Required:=Required.Always)>
        Public Property UpdatedAt As String

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
        End Sub
    End Class

    Public Class PartsSearchRequest
        Implements IValidatable

        <JsonProperty("keyword", Required:=Required.Always)>
        Public Property Keyword As String

        <JsonProperty("limit", NullValueHandling:=NullValueHandling.Ignore, Required:=Required.DisallowNull)>
        Public Property Limit As Nullable(Of Integer)

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
            Dim prefix As String = If(String.IsNullOrEmpty(path), String.Empty, path & ".")
            If Keyword IsNot Nothing Then
                If Keyword.Length < 1 Then issues.Add(prefix & "keyword" & ": " & "1 文字以上")
            End If
        End Sub
    End Class

    Public Class PartsSearchResponse
        Implements IValidatable

        <JsonProperty("items", Required:=Required.Always)>
        Public Property Items As List(Of Part) = New List(Of Part)()

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
            Dim prefix As String = If(String.IsNullOrEmpty(path), String.Empty, path & ".")
            If Items IsNot Nothing Then
                For i0 As Integer = 0 To Items.Count - 1
                    If Items(i0) IsNot Nothing Then
                        Items(i0).Validate(prefix & "items" & "[" & i0.ToString() & "]", issues)
                    End If
                Next
            End If
        End Sub
    End Class

    Public Class ProgressEvent
        Implements IValidatable

        <JsonProperty("percent", Required:=Required.Always)>
        Public Property Percent As Double

        <JsonProperty("message", NullValueHandling:=NullValueHandling.Ignore, Required:=Required.DisallowNull)>
        Public Property Message As String

        ''' <summary>契約の規則（文字数・範囲・列挙・件数・入れ子）を検査し、違反を issues に積む。必須と null 可否は JsonProperty の Required で検査済み</summary>
        Public Sub Validate(path As String, issues As IList(Of String)) Implements IValidatable.Validate
        End Sub
    End Class

End Namespace
"
`;

exports[`emitVb > sample contract > Events.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System
Imports WebView2Bridge.Runtime

Namespace Global.WebView2Bridge.Contract

    ''' <summary>Host → Web の型付きイベント発行ヘルパ。内部で IBridgeEmitter.Emit("event.&lt;name&gt;", payload) を呼ぶ</summary>
    Public Class BridgeEvents
        Private ReadOnly _emitter As IBridgeEmitter

        Public Sub New(emitter As IBridgeEmitter)
            If emitter Is Nothing Then Throw New ArgumentNullException(NameOf(emitter))
            _emitter = emitter
        End Sub

        ''' <summary>契約に含まれる全イベント名</summary>
        Public Shared ReadOnly EventNames As String() = {"event.progress"}

        ''' <summary>JSON-RPC notification "event.progress"</summary>
        Public Sub Progress(payload As ProgressEvent)
            _emitter.Emit("event.progress", payload)
        End Sub
    End Class

End Namespace
"
`;

exports[`emitVb > sample contract > Interfaces.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System
Imports System.Threading.Tasks

Namespace Global.WebView2Bridge.Contract

    ''' <summary>"parts.*" メソッドの実装。人間が Implements して WebView2Bridge.Impl に置く</summary>
    Public Interface IPartsApi
        ''' <summary>JSON-RPC method "parts.search"</summary>
        Function Search(req As PartsSearchRequest) As Task(Of PartsSearchResponse)
    End Interface

End Namespace
"
`;
